tests/baselines/reference/parserVariableDeclaration2.errors.txt
==== tests/cases/compiler/parserVariableDeclaration2.ts (2 errors) ====
    (function() {
            var check = function () {
            }
    
            var checkNot = function () {
            }
    
            MUnit.test(a);
            ~~~~~
!!! parserVariableDeclaration2.ts(8,9): error TS2095: Cannot find name 'MUnit'.
                       ~
!!! parserVariableDeclaration2.ts(8,20): error TS2095: Cannot find name 'a'.
    })();